--- a/style.css
+++ b/style.css
@@ -217,4 +217,113 @@ header.sticky{
     align-items: center;
     gap: 2rem;
     margin-top: 4rem;
+    display: flex;
+}
+
+.work-content img{
+    width: fit-content;
+    height: 200px;
+}
+
+.row img{
+    height: auto;
+    width: 100%;
+    border-radius: 12px;
+    margin-bottom: 1.4rem;
+}
+
+.row{
+    background: #25262d;
+    border-radius: 12px;
+    border: 1px solid transparent;
+    padding: 15px  20px;
+    transition: all .7s;
+}
+
+.main-row{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 0.5rem;
+}
+
+.row h5{
+    font-size: 15px;
+    font-weight: 500;
+    margin-bottom: 5px;
+}
+
+.row h4{
+    font-size: 17px;
+    font-weight: 600;
+}
+
+.row i{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 35px;
+    height: 35px;
+    font-size: 20px;
+    border-radius: 50%;
+    background: var(--main-color);
+    color: var(--bg-color);
+}
+
+.row:hover{
+    border: 1px solid var(--main-color);
+    transform: translateY(-3px) scale(1.02);
+    cursor: pointer;
+}
+
+.contact-form{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 4.3rem;
+}
+.contact-form form{
+    position: relative;
+    width: 600px;
+}
+form input,
+form textarea{
+    width: 100%;
+    padding: 20px;
+    border: none;
+    outline: none;
+    background: #25262d;
+    color: var(--text-color);
+    margin-bottom: 20px;
+    border-radius: 10px;
+}
+
+form input::placeholder
+form textarea::placeholder{
+    color: #fcfc;
+    font-size: 15px;
+}
+
+form textarea{
+    resize: none;
+}
+
+form .send-btn{
+    display: inline-block;
+    padding: 11px 25px;
+    background: var(--main-color);
+    color: var(--bg-color);
+    border: 2px solid var(--main-color);
+    border-radius: 8px;
+    font-size: 15px;
+    font-weight: 600;
+    transition: all .6s;
+    width: 30%;
+}
+
+form .send-btn:hover{
+    background: transparent;
+    color: var(--main-color);
+    box-sizing: 0 0 20px var(--main-color);
+    cursor: pointer;
 }
